--- a/src/main/picture.css
+++ b/src/main/picture.css
@@ -7,6 +7,7 @@
   background-repeat: no-repeat;
   width: 100%;
   height: 25rem;
+  margin-bottom: 2rem;
 }
 
 .topBar {
@@ -16,7 +17,7 @@
 }
 
 .topBarText {
-  color: white;
+  color: rgb(255, 255, 255);
 }
 
 .imageContents {
@@ -63,4 +64,8 @@
 }
 .button {
   color: white;
+}
+
+.menu-paper {
+  background-color: rgb(226, 226, 226);
 }
